# autotrading

./: .env.example  .gitignore  README.md  maeuknam_streams_flat.json  mojibake_hits_web.txt  pyproject.toml
docs/: local-pc-operation.md  restart-runbook.md
reports/: maeuknam_decision_structure_report.md  maeuknam_strategy_cards.json  maeuknam_strategy_cards.md  maeuknam_strategy_synthesis.md  maeuknam_streams_analysis.json  maeuknam_streams_analysis.md  maeuknam_streams_catalog.md  maeuknam_video_content_analysis.md
reports/alex_analysis/: 6fEhvy7mREc.alex_trading_method.md  (+2 more)
scripts/: alex_video_analysis.py  analyze_maeuknam_streams.py  extract_maeuknam_chart_frames.py  install-autostart-task.ps1  install-watchdog-task.ps1  maeuknam_24h_agency.py  maeuknam_decision_analysis.py  maeuknam_strategy_extraction.py  run_april_unknown_daily_simulation.py  run_day_walkforward_simulation.py  run_range_simulation.py  start-local.ps1  status-local.ps1  status-ops-tasks.ps1  stop-local.ps1  transcribe_maeuknam_streams.py  uninstall-ops-tasks.ps1  watchdog-local.ps1
tests/: test_alerts.py  test_allocation.py  test_auth.py  test_binance.py  test_binance_paper.py  test_broker.py  test_dashboard_auth.py  test_database.py  test_investment_agency.py  test_learning.py  test_live.py  test_maeuknam_24h_agency.py  test_market_regime.py  test_orderbook.py  test_pattern_learning.py  test_portfolio.py  test_price_units.py  test_realtime.py  test_realtime_engine.py  test_reverse_signal.py  test_risk.py  test_state.py  test_strategy.py  test_trade_levels.py  test_web_chart.py
(+938 files in other folders)
